lang/tests/compile_fail/seeds_wrong_arity.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/seeds_wrong_arity.rs:14:10
   |
14 | #[derive(Accounts)]
   |          ^^^^^^^^ expected an array with a size of 1, found one with a size of 0
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)
